--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <a class="nav-link text-white" href="#articles">ARTICLES</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link text-white" href="#">ANNOUNCEMENT</a>
+                            <a class="nav-link text-white" href="#announement">ANNOUNCEMENT</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link text-white" href="#">ACHIVEMENTS</a>
@@ -282,7 +282,9 @@
             </section>
     </section>
 
-    <section id="announement">
+    <!--Officers-->
+
+    <section id="Officers">
         <hr>
         <h2 style="text-align: center; padding-top: 5%;">OFFICERS/HEAD</h2>
         <h2 style="text-align: center; padding-top: 5%;">CHECK NIYO MGA PARS KUNG MAY GUSTO KAYO BAGUHIN O IADD . TULOY NATEN BUKAS YUNG READMORE TYAKA CLICK SA MGA ARTICLES.</h2>
